creusot/tests/should_fail/prusti/blocked_lifetime/simple.stderr
error[creusot]: invalid dereference of expression with home `old` and lifetime `'_` at time-slice `'curr`
 --> simple.rs:5:12
  |
5 | #[ensures(*x == 0u32)]
  |            ^

error: aborting due to previous error

